public/stylesheets/style.css
body {
  /* Padding started at 50px by default*/
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  background-color: lightgray;
}

/*START OF MAINTEXT: Properties affecting the main body of website text. */

.maintext {
  padding: 50px;
  margin: auto;
  width: 75%;
  background-color: white;
  font-size: 1.1em;
}
/*END OF MAINTEXT



/*Code for the website main header*/
#websiteHeader {
  color: black;
}


/*How links will be displayed on the website*/
a {
  color: #00B7FF;
}

/*Used for the big button defined later on so its text doesn't turn out looking blue*/
a.noColor {
  color: white;
}


/* THIS IS THE CODE FOR THE TOPNAV BAR IN LAYOUT.PUG
/* Add a blue background color to the top navigation */
.topnav {
  background-color: red;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: silver;
  color: white;
}

/* Add a color to the active/current link */
.topnav a.active {
  background-color: black;
  color: white;
}
/*END OF CODE FOR LAYOUT BAR IN LAYOUT.PUG!*/




/*START OF BIG BUTTON CSS CODE*/
/*Code for a nice big button for people to click to take them to My pokemon path*/
/*Code for button div*/

.button {
  display: inline-block;
  border-radius: 4px;
  background-color: red;
  border: none;
  color: #FFFFFF;
  text-align: center;
  font-size: 28px;
  padding: 20px;
  width: 200px;
  transition: all 0.5s;
  cursor: pointer;
  margin: 5px;
}


.button span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.button span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.button:hover span {
  padding-right: 25px;
}

.button:hover span:after {
  opacity: 1;
  right: 0;
}

.button:active {
  background-color: royalblue;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

/*End of big button code*/



/*START OF CSS FOR THE IMAGES*/

#eeveeImg {
  width: 50px;
  max-width: 400px;
  height: 50px;
  float: right;
}


#pikachuImg {
  width: 25%;
  max-width: 800px;
  height: 25%;
  opacity: 0.5;
  float: right;
}

#jigglypuff {
  width: 50%;
  max-width: 684px;
  height: 50%;
  opacity: 0.5;
  float: right;
}

#mew {
  width: 50%;
  max-width: 684px;
  height: 50%;
  opacity: 0.5;
  float: right;
}

#bulbasaur {
  width: 30%;
  max-width: 900px;
  height: 30%;
  opacity: 0.5;
  float: right;
}

#happyPikachu {
  width: 100%;
  max-width: 684px;
  height: 100%;
  opacity: 0.9;
}

#espeon {
  width: 100%;
  max-width: 395px;
  height: 100%;
  opacity: 0.5;
}

#ditto {
  width: 100%;
  max-width: 400px;
  height: 100%;
  opacity: 0.5;
  float: center;
}

/*END OF CSS FOR THE IMAGES


/* use this class to underline specified text */
.underline {
    text-decoration: underline;
}

/* This is for the pokemon_id_search.pug page */
#IdAndName {
    text-align: center;
}

/*This is the CSS for displaying the totals for the your_path_results*/
p.results {
  font-size: 1.15em;
}

/*This is the CSS for displaying the game recommendations for you_path_results*/
#recommendations {
  font-size: 1.15em;
}

/*This is the CSS for displaying something as bold*/
.bold {
  font-weight: bold;
}

